--- a/src/components/layout/SiteLayout.scss
+++ b/src/components/layout/SiteLayout.scss
@@ -2,8 +2,20 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     background-color: #0A1929;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 #main {
    background-color: #0A1929;
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+}
+
+.site-layout {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
